# cerberus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.hpp  config.hpp.in
include/: cerberus.hpp  utils.hpp
src/: cerberus.cpp  main.cpp  utils.cpp
